99-app-repos/stock-app-config/app/100-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: stock-application
    app.kubernetes.io/part-of: app-stock-application
  name: stock-application
  namespace: app-stock-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: stock-application
      app.kubernetes.io/part-of: app-stock-application
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/name: stock-application
        app.kubernetes.io/part-of: app-stock-application
    spec:
      containers:
      - image: nginxinc/nginx-unprivileged:latest
        imagePullPolicy: Always
        name: stock-application
        ports:
        - containerPort: 8080
        resources: {}
      serviceAccountName: default
status: {}
