99-app-repos/stock-app-config/app/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: stock-application
  namespace: app-stock-application
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: stock-application
    weight: 100
  wildcardPolicy: None
